--- a/src/pages/projects/projects.html
+++ b/src/pages/projects/projects.html
@@ -19,7 +19,7 @@
   <ion-list>
     <ion-row *ngIf="projects.length == 0">
       <ion-col text-center>
-        <p>No projects found or loading.</p>
+        <p>No projects found.</p>
       </ion-col>
     </ion-row>
 
