--- a/src/pages/project-form/project-form.html
+++ b/src/pages/project-form/project-form.html
@@ -6,7 +6,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content>
     <form [formGroup]="projectForm" (ngSubmit)="onSubmit()">
         <ion-list>
             <ion-list-header>
