--- a/src/pages/risk/risk.html
+++ b/src/pages/risk/risk.html
@@ -28,7 +28,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content>
   <div [ngSwitch]="tab">
     <ion-list *ngSwitchCase="'info'">
       <ion-list-header>
